@@ -23,11 +23,19 @@
     <glob pattern="*.gchempaint"/>
   </mime-type>
   <mime-type type="application/x-nuts-fid">
-    <_comment>NUTS file format</_comment>
+    <_comment>NUTS FID file format</_comment>
     <magic priority="50">
       <match type="string" value="\001\002\003\004" offset="0"/>
     </magic>
     <root-XML namespaceURI="http://www.acornnmr.com/" localName="fid"/>
     <glob pattern="*.fid"/>
+  </mime-type>
+  <mime-type type="application/x-nuts-spc">
+    <_comment>NUTS spectrum file format</_comment>
+    <magic priority="50">
+      <match type="string" value="\001\002\003\004" offset="0"/>
+    </magic>
+    <root-XML namespaceURI="http://www.acornnmr.com/" localName="spc"/>
+    <glob pattern="*.spc"/>
   </mime-type>
 </mime-info>
